Fixed overflow issue in mobile browsers

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -188,6 +188,16 @@
 
 /* for mobile */
 @media only screen and (max-width:767px) {
+
+
+    html, body {
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow-x: hidden; 
+    }
+
     nav {
         list-style-type: none;
         margin: 25px;
